local_dev/hub.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: berdlhub
  name: jupyterhub
  namespace: jupyterhub-dev
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app.kubernetes.io/name: berdlhub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: berdlhub
  name: berdlhub
  namespace: jupyterhub-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: berdlhub
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: berdlhub
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: jupyterhub-config
        image: ghcr.io/berdatalakehouse/berdl_jupyterhub:pr-3 # Change this!
        name: berdlhub
        ports:
        - containerPort: 8000
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - DAC_OVERRIDE
            - FOWNER
            - NET_BIND_SERVICE
            - SETGID
            - SETUID
            drop:
            - ALL
#        volumeMounts:
#        - mountPath: /srv/jupyterhub
#          name: jupyterhub-data
#      nodeSelector:
#        kubernetes.io/hostname: kworker02
      serviceAccountName: jupyterhub-user-pod-creator
#      volumes:
#      - hostPath:
#          path: /mnt/state/jupyterhub-{env}
#          type: Directory
#        name: jupyterhub-data
